--- a/BeatBallot.Web/Pages/_Host.cshtml
+++ b/BeatBallot.Web/Pages/_Host.cshtml
@@ -12,9 +12,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <base href="~/" />
-    <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
+    @* <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" /> *@
     <link href="css/site.css" rel="stylesheet" />
-    <link href="BeatBallot.styles.css" rel="stylesheet" />
+    <link href="BeatBallot.Web.styles.css" rel="stylesheet" />
     <link rel="icon" type="image/png" href="favicon.png"/>
     <component type="typeof(HeadOutlet)" render-mode="Server" />
 </head>
